--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <li id="contacto">Contacto</li>
         </ul>
     </div>
-    <div class="container">
-        
+    <div class="container" id="pagina">
+
     </div>
 </body>
 </html>
