Copy de Acerca de mi, mejora en el diseño

--- a/index.html
+++ b/index.html
@@ -11,13 +11,62 @@
 <body>
     <div class="nav">
         <ul>
-            <li id="inicio" class="active">Inicio</li>
-            <li id="acercade">Acerca de</li>
-            <li id="contacto">Contacto</li>
+            <li id="menu_acercademi" class="active">Acerca de mí</li>
+            <li id="menu_portafolio">Portafolio</li>
+            <li id="menu_contacto">Contacto</li>
         </ul>
     </div>
-    <div class="container" id="pagina">
+    <div class="container">
+        <section id="acercademi">
+            <div class="block-content mb-50">
+                <div class="title">Joel Clemente Serrano</div>
+                <div class="subtitle">Analista y desarrollador de sistemas web</div>
+            </div>
+        
+            <div class="block-content mb-50">
+                <p class="acercademi">
+                    Me dedico al análisis y desarrollo de sistemas desde 1990.
+                    <strong>Mi especialidad</strong> es el análisis de los requerimientos de mis clientes, quienes necesitan soluciones <strong>"a la medida"</strong> para el ejercicio de su empresa.
+                </p>
+                <p class="acercademi">
+                    Lo que te ofrezco es una solución, la cual no se resolvería con cualquiera software que exista en el mercado y que haya sido creado en serie.
+                </p>
+                <p class="acercademi">
+                    La solución para tu empresa es crear la aplicación acecuada (web o de escritorio) de una manera simple, con el propósito de simplificar tus procesos y que obtengas informes rápidos que te ayudarán a optimizar tiempo para la toma de decisiones.
+                </p>
+            </div>
+            <div class="block-content mg-50">
+                <div class="card">
+                    <div class="card-title">Información personal</div>
+                    <div class="card-body">
 
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="portafolio">
+            <div class="title">Portafolio</div>
+        </section>
+        <section id="contacto">
+            <div class="title">Contacto</div>
+            <div class="block-content mb-50">
+                <div class="label">Correo electrónico:</div>
+                <div class="data">joelclementes@gmail.com</div>
+            </div>
+
+            <div class="block-content mb-50">
+                <span class="label">Facebook:</span>
+                <a href="https://www.facebook.com/joelclementeserrano" target="blank" class="data">joelclementeserrano</a>
+            </div>
+            <div class="block-content mb-50">
+                <span class="label">Instagram:</span>
+                <a href="https://www.instagram.com/joelclementes" target="blank" class="data">joelclementes</a>
+            </div>
+            <div class="block-content mb-50">
+                <span class="label">Youtube:</span>
+                <a href="https://www.youtube.com/user/joelcs73yt" target="blank" class="data">Joel Clemente Serrano</a>
+            </div>
+        </section>
     </div>
 </body>
 </html>
