Corrección de copy de [Acerca de mi]

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     Lo que te ofrezco es una solución, la cual no se resolvería con cualquiera software que exista en el mercado y que haya sido creado en serie.
                 </p>
                 <p class="acercademi">
-                    La solución para tu empresa es crear la aplicación acecuada (web o de escritorio) de una manera simple, con el propósito de simplificar tus procesos y que obtengas informes rápidos que te ayudarán a optimizar tiempo para la toma de decisiones.
+                    La solución para tu empresa es crear la aplicación acecuada de una manera simple, con el propósito de simplificar tus procesos y que obtengas informes rápidos que te ayudarán a optimizar tiempo para la toma de decisiones.
                 </p>
             </div>
             <div class="block-content mg-50">
