Corrección de copy de [Acerca de mi]

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <strong>Mi especialidad</strong> es el análisis de los requerimientos de mis clientes, quienes necesitan soluciones <strong>"a la medida"</strong> para el ejercicio de su empresa.
                 </p>
                 <p class="acercademi">
-                    Lo que te ofrezco es una solución, la cual no se resolvería con cualquiera software que exista en el mercado y que haya sido creado en serie.
+                    Lo que te ofrezco es una solución, la cual no se resolvería con cualquiera software que exista en el mercado creado en serie.
                 </p>
                 <p class="acercademi">
                     La solución para tu empresa es crear la aplicación acecuada de una manera simple, con el propósito de simplificar tus procesos y que obtengas informes rápidos que te ayudarán a optimizar tiempo para la toma de decisiones.
